<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_ibeacon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/label_ibeacon"
        android:textSize="20sp"
        android:textColor="@color/Black" />
    <TextView
        android:id="@+id/text_address"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_ibeacon"
        android:layout_marginTop="5dp"
        android:text="@string/label_address"
        android:textStyle="bold"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/text_address_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_ibeacon"
        android:layout_toRightOf="@+id/text_address"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/text_uuid"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_address"
        android:layout_marginTop="5dp"
        android:text="@string/label_uuid"
        android:textStyle="bold"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/text_uuid_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_address"
        android:layout_toRightOf="@+id/text_uuid"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/text_major"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_uuid"
        android:layout_marginTop="5dp"
        android:text="@string/label_major"
        android:textStyle="bold"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/text_major_value"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_major"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/text_minor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_uuid"
        android:layout_toRightOf="@+id/text_major"
        android:layout_marginTop="5dp"
        android:text="@string/label_minor"
        android:textStyle="bold"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/text_minor_value"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_minor"
        android:layout_toRightOf="@+id/text_major"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/text_rssi"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_uuid"
        android:layout_toRightOf="@+id/text_minor"
        android:layout_marginTop="5dp"
        android:text="@string/label_rssi"
        android:textStyle="bold"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/text_rssi_value"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_rssi"
        android:layout_toRightOf="@+id/text_minor"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black" />

</RelativeLayout>